[project]
name = "slack-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "slack-bolt>=1.23.0",
    "snowflake>=1.3.0",
    "snowflake-connector-python[pandas]>=3.14.0",
    "snowflake-snowpark-python>=1.30.0",
    "vl-convert-python>=1.7.0",
]
